@@ -242,7 +242,11 @@ error or to the file
 By default,
 .I pseudo
 daemon messages go into the log file, but messages generated by the client
-code go to standard error.  At the default logging level, only critical
+code go to standard error.  These can be changed using the
+.B PSEUDO_DEBUG_FILE
+environment variable, documented in
+.BR ENVIRONMENT .
+At the default logging level, only critical
 messages are displayed.  If you have raised the logging level (using the
 .I \-v
 option or the
@@ -296,9 +300,14 @@ the default is to log to standard error.  If the string contains a single
 that string is replaced with the short program name, and if it contains
 a single
 .BR %d ,
-that string is replaced with the process ID.  The presence of other
-format specifiers, or more than one of either of these, may produce
-undesired behavior.
+that string is replaced with the process ID.  Other format specifiers
+(other than '%%') are not allowed.  By default, the
+.I pseudo
+server logs to the file
+.I pseudo.log
+in the
+.I var/pseudo
+directory, while clients log to standard error.
 .TP 8
 .B PSEUDO_ENOSYS_ABORT
 If this variable is set, the
